# mppbase

./: README.md
include/: macro.h
include/mpp/: crc_logic.hpp  crc_models.hpp  error.h  error.hpp  linked_list.hpp  logging.h  logging.hpp  macro_assert.h  macro_helper.h  macro_utils.h  mixin.hpp  ring_buffer.hpp  rtc_time.hpp  string.hpp  systick.hpp  timer.hpp  utils.hpp
include/mpp/config/: core_config.h  core_default_config.h
include/mpp/platform/: assert.h  logging.h  toolchain.h
platform/synth/: logging.cpp  time.cpp
src/: timer.cpp
src/api/: error_api.cpp  logging_api.cpp
src/common/: error.cpp  error.hpp  logging.cpp  string.cpp  timer.cpp
test/build-synth-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  synth
test/build-synth-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f5c2e0a0aaf0bfde2e69.json  cmakeFiles-v1-15d31430cc03565ae4d3.json  codemodel-v2-2082649658d59479a4df.json  index-2021-07-22T11-02-46-0927.json  target-synth-Debug-0ecf1a131c11821e76e4.json
test/synth/: CMakeLists.txt  main.cpp
